--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "template-router",
-  "version": "0.0.0",
-  "description": "Collection of custom components for routing using templates",
+  "name": "template-yield",
+  "version": "0.1.0",
+  "description": "Easily stamp <template>s with Polymer data bindings",
   "scripts": {
     "test": "gulp test:local"
   },
@@ -13,38 +13,40 @@
     "template"
   ],
   "repository": {
-    "type" : "git",
-    "url" : "https://github.com/simplaio/template-router.git"
+    "type": "git",
+    "url": "https://github.com/simplaio/template-yield.git"
   },
   "bugs": {
-    "url" : "https://github.com/simplaio/template-router/issues"
+    "url": "https://github.com/simplaio/template-yield/issues"
   },
   "devDependencies": {
     "autoprefixer": "^6.0.3",
     "babel": "^5.8.23",
     "babel-core": "^5.8.25",
     "babel-eslint": "^4.1.3",
-    "babel-loader": "^5.3.2",
+    "babel-preset-es2015-rollup": "^1.0.0",
     "browser-sync": "^2.9.8",
     "del": "^2.0.2",
     "eslint": "^1.6.0",
     "gulp": "^3.9.0",
-    "gulp-babel": "^5.2.1",
     "gulp-eslint": "^1.0.0",
+    "gulp-filter": "^3.0.1",
     "gulp-if": "^2.0.0",
     "gulp-minify-inline": "^0.1.1",
     "gulp-notify": "^2.2.0",
     "gulp-plumber": "^1.0.1",
     "gulp-postcss": "^6.0.0",
     "gulp-replace": "^0.5.4",
+    "gulp-rollup": "^1.4.0",
     "gulp-vulcanize": "^6.0.1",
     "polyclean": "^1.2.0",
     "polylint": "^2.3.1",
+    "rollup-plugin-babel": "^2.1.0",
+    "rollup-plugin-commonjs": "^1.4.0",
+    "rollup-plugin-npm": "^1.1.0",
     "run-sequence": "^1.1.4",
     "vinyl-named": "^1.1.0",
     "web-component-tester": "^3.3.22",
-    "webpack": "^1.12.2",
-    "webpack-stream": "^2.1.1",
     "yargs": "^3.27.0"
   }
 }
