--- a/bower.json
+++ b/bower.json
@@ -2,6 +2,7 @@
   "name": "template-yield",
   "description": "Easily stamp <template>s with Polymer data bindings",
   "version": "0.1.0",
+  "main": "template-yield.html",
   "authors": [
     "Simpla <admin@simpla.io>"
   ],
